--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,4 +63,4 @@ spring:
 pharmacy:
     recommendation:
       base:
-        url: http://localhost/dir/ # aws ec2 ip 할당 받은 후 변경 예정
+        url: http://15.164.11.189/dir/  # aws ec2 ip 할당 받은 후 변경 예정
